Add missing using directive

--- a/src/OpenTelemetry.SemanticConventions/scripts/templates/SemanticConventionsAttributes.cs.j2
+++ b/src/OpenTelemetry.SemanticConventions/scripts/templates/SemanticConventionsAttributes.cs.j2
@@ -23,6 +23,8 @@
 
 #pragma warning disable CS1570 // XML comment has badly formed XML
 
+using System;
+
 namespace OpenTelemetry.SemanticConventions
 {
     /// <summary>
