--- a/src/OpenTelemetry.SemanticConventions/scripts/templates/SemanticConventionsAttributes.cs.j2
+++ b/src/OpenTelemetry.SemanticConventions/scripts/templates/SemanticConventionsAttributes.cs.j2
@@ -30,12 +30,9 @@ namespace OpenTelemetry.SemanticConventions
     /// <summary>
     /// Constants for semantic attribute names outlined by the OpenTelemetry specifications.
     /// </summary>
-    /// <remarks>
-    /// Schema and specification version: {{schemaUrl}}.
-    /// </remarks>
-    public static class SemanticConventionsAttributes
+    public static class {{ root_namespace | to_camelcase(True) }}Attributes
     {
-{% for attribute in attributes if attribute.is_local and not attribute.ref %}
+{% for attribute in attributes_and_templates %}
   {% if not loop.first %}{{"\n"}}{% endif %}
         /// <summary>
         /// {{format_xml_doc(attribute.brief | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}
@@ -50,17 +47,7 @@ namespace OpenTelemetry.SemanticConventions
   {% endif %}
         public const string Attribute{{attribute.fqn  | replace("-","_") | to_camelcase(True)}} = "{{attribute.fqn}}";
 {% endfor %}
-{% for semconv in semconvs.values() %}
-  {% if semconv.GROUP_TYPE_NAME == 'event' %}
-
-        /// <summary>
-        /// Event name for '{{semconv.semconv_id}}'.
-        /// </summary>
-        public static readonly string Event{{semconv.semconv_id | replace("-","_") | to_camelcase(True)}} = "{{semconv.name}}";
-  {% endif %}
-{% endfor %}
-{% for attribute in attributes if attribute.is_local and not attribute.ref %}
-  {% if attribute.is_enum %}
+{% for attribute in enum_attributes %}
   {% set class_name = attribute.fqn | to_camelcase(True) ~ "Values" %}
   {% set type = attribute.attr_type.enum_type %}
 
@@ -77,7 +64,6 @@ namespace OpenTelemetry.SemanticConventions
             {% if not loop.last %}{{"\n"}}{% endif %}
             {% endfor %}
         }
-  {% endif %}
 {% endfor %}
     }
 }
