--- a/src/OpenTelemetry.SemanticConventions/scripts/templates/SemanticConventionsAttributes.cs.j2
+++ b/src/OpenTelemetry.SemanticConventions/scripts/templates/SemanticConventionsAttributes.cs.j2
@@ -25,46 +25,45 @@
 
 using System;
 
-namespace OpenTelemetry.SemanticConventions
+namespace OpenTelemetry.SemanticConventions;
+
+/// <summary>
+/// Constants for semantic attribute names outlined by the OpenTelemetry specifications.
+/// </summary>
+public static class {{ root_namespace | to_camelcase(True) }}Attributes
 {
-    /// <summary>
-    /// Constants for semantic attribute names outlined by the OpenTelemetry specifications.
-    /// </summary>
-    public static class {{ root_namespace | to_camelcase(True) }}Attributes
-    {
 {% for attribute in attributes_and_templates %}
-  {% if not loop.first %}{{"\n"}}{% endif %}
-        /// <summary>
-        /// {{format_xml_doc(attribute.brief | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}
-        /// </summary>
-  {% if attribute.note %}
-        /// <remarks>
-        /// {{format_remarks(attribute.note | to_doc_brief | escape | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}.
-        /// </remarks>
-  {% endif %}
-  {% if attribute.deprecated %}
-        [Obsolete("{{attribute.deprecated | to_doc_brief | replace('"', "")}}")]
-  {% endif %}
-        public const string Attribute{{attribute.fqn  | replace("-","_") | to_camelcase(True)}} = "{{attribute.fqn}}";
+{% if not loop.first %}{{"\n"}}{% endif %}
+    /// <summary>
+    /// {{format_xml_doc(attribute.brief | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}
+    /// </summary>
+{% if attribute.note %}
+    /// <remarks>
+    /// {{format_remarks(attribute.note | to_doc_brief | escape | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}.
+    /// </remarks>
+{% endif %}
+{% if attribute.deprecated %}
+    [Obsolete("{{attribute.deprecated | to_doc_brief | replace('"', "")}}")]
+{% endif %}
+    public const string Attribute{{attribute.fqn  | replace("-","_") | to_camelcase(True)}} = "{{attribute.fqn}}";
 {% endfor %}
 {% for attribute in enum_attributes %}
-  {% set class_name = attribute.fqn | to_camelcase(True) ~ "Values" %}
-  {% set type = attribute.attr_type.enum_type %}
+{% set class_name = attribute.fqn | to_camelcase(True) ~ "Values" %}
+{% set type = attribute.attr_type.enum_type %}
 
+    /// <summary>
+    /// {{format_xml_doc(attribute.brief | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}
+    /// </summary>
+    public static class {{class_name}}
+    {
+        {% for member in attribute.attr_type.members %}
         /// <summary>
-        /// {{format_xml_doc(attribute.brief | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}
+        /// {{format_xml_doc(member.brief | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}
         /// </summary>
-        public static class {{class_name}}
-        {
-            {% for member in attribute.attr_type.members %}
-            /// <summary>
-            /// {{format_xml_doc(member.brief | render_markdown(code="<c>{0}</c>", paragraph="{0}"))}}
-            /// </summary>
-            public const {{ type }} {{ member.member_id | to_camelcase(True) }} = {{ print_value(type, member.value) }};
-            {% if not loop.last %}{{"\n"}}{% endif %}
-            {% endfor %}
-        }
-{% endfor %}
+        public const {{ type }} {{ member.member_id | to_camelcase(True) }} = {{ print_value(type, member.value) }};
+        {% if not loop.last %}{{"\n"}}{% endif %}
+        {% endfor %}
     }
+{% endfor %}
 }
 
