--- a/src/OpenTelemetry.SemanticConventions/scripts/templates/registry/common.j2
+++ b/src/OpenTelemetry.SemanticConventions/scripts/templates/registry/common.j2
@@ -1,7 +1,3 @@
-{%- macro to_const_name(attr_name) -%}
-{{attr_name | pascal_case | replace('.', '_')}}
-{%- endmacro %}
-
 {%- macro attribute_name(attribute) -%}
-{{to_const_name(attribute.name)}}{%- if "template" in attribute.type -%}_TEMPLATE{%- endif -%}
+{{ attribute.name | pascal_case }}{%- if "template" in attribute.type -%}Template{%- endif -%}
 {%- endmacro -%}
